--- a/WorkFromWhere/Base.lproj/CellView.xib
+++ b/WorkFromWhere/Base.lproj/CellView.xib
@@ -15,8 +15,21 @@
             <rect key="frame" x="0.0" y="0.0" width="341" height="279"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="z5b-3o-ryT">
+                    <rect key="frame" x="145" y="114" width="50" height="50"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sdf-IT-uZ5">
+                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="0.74858197773972601" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="50" id="W61-tw-Wv2"/>
+                                <constraint firstAttribute="height" constant="50" id="hDc-iF-BS6"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                </stackView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dateTextGoesHere" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bs-lR-m1Q">
-                    <rect key="frame" x="99" y="129" width="142" height="21"/>
+                    <rect key="frame" x="99" y="129.5" width="142" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -24,12 +37,15 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="z5b-3o-ryT" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Mpb-xM-iMx"/>
                 <constraint firstItem="8bs-lR-m1Q" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="NCR-su-sEC"/>
+                <constraint firstItem="z5b-3o-ryT" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="ONt-N1-iPf"/>
                 <constraint firstItem="8bs-lR-m1Q" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="dx9-y6-cg2"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="dayLabel" destination="8bs-lR-m1Q" id="33R-kr-trX"/>
+                <outlet property="selectedView" destination="sdf-IT-uZ5" id="vIx-Ed-04u"/>
             </connections>
             <point key="canvasLocation" x="82.5" y="-187.5"/>
         </view>
