--- a/WorkFromWhere/Base.lproj/CellView.xib
+++ b/WorkFromWhere/Base.lproj/CellView.xib
@@ -17,7 +17,7 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sdf-IT-uZ5">
                     <rect key="frame" x="145" y="114" width="50" height="50"/>
-                    <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="0.74858197773972601" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="W61-tw-Wv2"/>
                         <constraint firstAttribute="height" constant="50" id="hDc-iF-BS6"/>
@@ -30,7 +30,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.11276648183564737" green="0.62342148047655288" blue="0.99815553430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="sdf-IT-uZ5" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="3Oh-Zf-TGZ"/>
                 <constraint firstItem="8bs-lR-m1Q" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="NCR-su-sEC"/>
